# idiomapp_graph_web

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  example.env  graph_app.py  init_project.sh  pyproject.toml  streamlit_app.py  vibelog.md
.streamlit/: config.toml
archive/: README.md  run.py
archive/idiomapp/: main.py  ollama_utils.py
docker/: Dockerfile  docker-entrypoint.sh
docs/: LANGUAGE_GRAPHS.md
idiomapp/: __init__.py  config.py  logging_utils.py  ollama_utils.py
idiomapp/api/: __init__.py  app.py
idiomapp/streamlit/: __init__.py  app.py
idiomapp/templates/: index.html
idiomapp/utils/: README.md  __init__.py  audio_utils.py  graph_storage.py  llm_utils.py  logging_utils.py  nlp_utils.py  ollama_utils.py  state_utils.py
