[project]
name = "idiomapp"
version = "0.1.0"
description = "Interactive graph visualization application"
authors = [{ name = "sg" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "networkx>=3.4.0,<4",
    "matplotlib>=3.10.0,<4",
    "python-dotenv>=1.1.0,<2",
    "streamlit>=1.44.0,<2",
    "pyvis>=0.3.2,<0.4",
    "ollama>=0.4.7,<0.5",
    "gtts>=2.5.4,<3",
    "langdetect>=1.0.9,<2",
    "jinja2>=3.1.6,<4",
    "textacy>=0.13.0,<0.14",
    "numpy==1.26.4",
    "textdistance>=4.6.3,<5",
    "openai>=1.82.1,<2",
    "pydantic-settings>=2.9.1,<3",
]

[project.scripts]
api = "idiomapp.api.app:start"
graph = "idiomapp.streamlit.app:main"

[dependency-groups]
dev = [
    "black>=23.7.0,<24",
    "watchfiles>=0.22.0,<0.23",
    "autoflake>=2.3.0,<3",
    "isort>=5.13.0,<6",
    "flake8>=7.0.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["idiomapp"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".mypy_cache",
]
